objects/Campaign_Demographics__c.object
<CustomObject>
    <fields>
        <fullName>Address_Deliverable__c</fullName>
        <label>Mailing Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has a valid or foreign mailing address</fullName>
                </value>
                <value>
                    <fullName>Doesn’t have a valid or foreign mailing address</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgeFrom_UI__c</fullName>
        <label>Age From</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeTo_UI__c</fullName>
        <label>Age To</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assimilation__c</fullName>
        <label>Assimilation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Assimilated</fullName>
                </value>
                <value>
                    <fullName>Bilingual English</fullName>
                </value>
                <value>
                    <fullName>Bilingual Native Tongue</fullName>
                </value>
                <value>
                    <fullName>Unassimilated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate_Ranges__c</fullName>
        <label>Birthdate Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Birth_Month__c</fullName>
        <label>Birth Month</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Current Month</fullName>
                </value>
                <value>
                    <fullName>Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Demographics</relationshipLabel>
        <relationshipName>Campaign_Demographics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOBFrom_UI__c</fullName>
        <label>Birthdate From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOBTo_UI__c</fullName>
        <label>Birthdate To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Birthdate</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discretionary_Income_Percent_ranges__c</fullName>
        <label>Discretionary Income Percent ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dwelling_Type__c</fullName>
        <label>Dwelling Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi Family Dwelling/Apartment</fullName>
                </value>
                <value>
                    <fullName>Business Address</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Private Mail Box</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Mobile Home Park</fullName>
                </value>
                <value>
                    <fullName>Slip or Marina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Discretionary_Income_Percent__c</fullName>
        <label>Discretionary Income Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Discretionary_Income_Percent_to__c</fullName>
        <label>to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Household_Debt_Level__c</fullName>
        <label>Est Household Debt Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A = $0</fullName>
                </value>
                <value>
                    <fullName>B = $1 - $1,499</fullName>
                </value>
                <value>
                    <fullName>C = $1,500 - $3,499</fullName>
                </value>
                <value>
                    <fullName>D = $3,500 - $7,499</fullName>
                </value>
                <value>
                    <fullName>E = $7,500 - $14,999</fullName>
                </value>
                <value>
                    <fullName>F = $15,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>G = $25,000 - $39,999</fullName>
                </value>
                <value>
                    <fullName>H = $40,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>I = $75,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Household_Income_3_0__c</fullName>
        <label>Household Income</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $15,000</fullName>
                </value>
                <value>
                    <fullName>$15,000-$19,999</fullName>
                </value>
                <value>
                    <fullName>$20,000-$29,999</fullName>
                </value>
                <value>
                    <fullName>$30,000-$39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000-$49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000-$59,999</fullName>
                </value>
                <value>
                    <fullName>$60,000-$74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000-$99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000-$124,999</fullName>
                </value>
                <value>
                    <fullName>$125,000-$149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000-$199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000-$249,999</fullName>
                </value>
                <value>
                    <fullName>$250,000-$399,999</fullName>
                </value>
                <value>
                    <fullName>$400,000-$499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000+</fullName>
                </value>
                <value>
                    <fullName>A = Less than $15,000</fullName>
                    <isActive>false</isActive>
                    <label>A = Less than $15,000</label>
                </value>
                <value>
                    <fullName>B = $15,000-$19,999</fullName>
                    <isActive>false</isActive>
                    <label>B = $15,000-$19,999</label>
                </value>
                <value>
                    <fullName>C = $20,000-$29,999</fullName>
                    <isActive>false</isActive>
                    <label>C = $20,000-$29,999</label>
                </value>
                <value>
                    <fullName>D = $30,000-$39,999</fullName>
                    <isActive>false</isActive>
                    <label>D = $30,000-$39,999</label>
                </value>
                <value>
                    <fullName>E = $40,000-$49,999</fullName>
                    <isActive>false</isActive>
                    <label>E = $40,000-$49,999</label>
                </value>
                <value>
                    <fullName>F = $50,000-$59,999</fullName>
                    <isActive>false</isActive>
                    <label>F = $50,000-$59,999</label>
                </value>
                <value>
                    <fullName>G = $60,000-$74,999</fullName>
                    <isActive>false</isActive>
                    <label>G = $60,000-$74,999</label>
                </value>
                <value>
                    <fullName>H = $75,000-$99,999</fullName>
                    <isActive>false</isActive>
                    <label>H = $75,000-$99,999</label>
                </value>
                <value>
                    <fullName>I = $100,000-$124,999</fullName>
                    <isActive>false</isActive>
                    <label>I = $100,000-$124,999</label>
                </value>
                <value>
                    <fullName>J = $125,000-$149,999</fullName>
                    <isActive>false</isActive>
                    <label>J = $125,000-$149,999</label>
                </value>
                <value>
                    <fullName>K = $150,000-$199,999</fullName>
                    <isActive>false</isActive>
                    <label>K = $150,000-$199,999</label>
                </value>
                <value>
                    <fullName>L = $200,000-$249,999</fullName>
                    <isActive>false</isActive>
                    <label>L = $200,000-$249,999</label>
                </value>
                <value>
                    <fullName>M = $250,000-$399,999</fullName>
                    <isActive>false</isActive>
                    <label>M = $250,000-$399,999</label>
                </value>
                <value>
                    <fullName>N = $400,000-$499,999</fullName>
                    <isActive>false</isActive>
                    <label>N = $400,000-$499,999</label>
                </value>
                <value>
                    <fullName>O = $500,000+</fullName>
                    <isActive>false</isActive>
                    <label>O = $500,000+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethcinity_Criteria_Element__c</fullName>
        <label>Ethcinity Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethcinity__c</fullName>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>African Continental</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Aleut</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Arab</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Ashanti</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Batswana (Botswana)</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bosniak</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burkinabe (Burkina Faso)</fullName>
                </value>
                <value>
                    <fullName>Burmese (Myanmar)</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Byelorussian</fullName>
                </value>
                <value>
                    <fullName>Cameroonian</fullName>
                </value>
                <value>
                    <fullName>Central African (Central African Republic)</fullName>
                </value>
                <value>
                    <fullName>Chadian</fullName>
                </value>
                <value>
                    <fullName>Chechen</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Caribbean Non-Hispanic</fullName>
                </value>
                <value>
                    <fullName>Central Asian</fullName>
                </value>
                <value>
                    <fullName>East Asian</fullName>
                </value>
                <value>
                    <fullName>Eastern European</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>Middle Eastern</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
                <value>
                    <fullName>Polynesian</fullName>
                </value>
                <value>
                    <fullName>Scandinavian</fullName>
                </value>
                <value>
                    <fullName>South Asian</fullName>
                </value>
                <value>
                    <fullName>Southeast Asian</fullName>
                </value>
                <value>
                    <fullName>Uncoded</fullName>
                </value>
                <value>
                    <fullName>Western European</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                    <isActive>false</isActive>
                    <label>test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_Criteria_Element__c</fullName>
        <label>Gender Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                    <isActive>false</isActive>
                    <label>Blank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generations_2_0__c</fullName>
        <label>Generations 2.0</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age Defying Techies</fullName>
                </value>
                <value>
                    <fullName>Boomerang Kids</fullName>
                </value>
                <value>
                    <fullName>Budget-Conscious Seniors</fullName>
                </value>
                <value>
                    <fullName>Caring for Mom &amp; Dad</fullName>
                </value>
                <value>
                    <fullName>Conditions &amp; Connections</fullName>
                </value>
                <value>
                    <fullName>Country Traditionalists</fullName>
                </value>
                <value>
                    <fullName>Established Family Life</fullName>
                </value>
                <value>
                    <fullName>Financing The Basics</fullName>
                </value>
                <value>
                    <fullName>Footloose on Little</fullName>
                </value>
                <value>
                    <fullName>Grandfamilies Sharing the Load</fullName>
                </value>
                <value>
                    <fullName>Hard-working Renters</fullName>
                </value>
                <value>
                    <fullName>Healthy, Wealthy, &amp; Urbanized</fullName>
                </value>
                <value>
                    <fullName>Late to the Party Parents</fullName>
                </value>
                <value>
                    <fullName>Living Paycheck to Paycheck</fullName>
                </value>
                <value>
                    <fullName>Loving the Outdoor Life</fullName>
                </value>
                <value>
                    <fullName>Mainstream Metros</fullName>
                </value>
                <value>
                    <fullName>May December Families</fullName>
                </value>
                <value>
                    <fullName>Multigenerational Togetherness</fullName>
                </value>
                <value>
                    <fullName>No Rest for the Weary</fullName>
                </value>
                <value>
                    <fullName>Off-The-Grid Seniors</fullName>
                </value>
                <value>
                    <fullName>Old Fashioned Success</fullName>
                </value>
                <value>
                    <fullName>Online Fashionistas</fullName>
                </value>
                <value>
                    <fullName>Reaping Their Benefits</fullName>
                </value>
                <value>
                    <fullName>Rural Techies Making Do</fullName>
                </value>
                <value>
                    <fullName>Rustic Outsiders</fullName>
                </value>
                <value>
                    <fullName>Shopaholics in the Country</fullName>
                </value>
                <value>
                    <fullName>Singles in a Bind</fullName>
                </value>
                <value>
                    <fullName>Sitting Pretty in the City</fullName>
                </value>
                <value>
                    <fullName>Strapped Metros</fullName>
                </value>
                <value>
                    <fullName>Strapped Seniors in Small Towns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_size_ranges__c</fullName>
        <label>Household size ranges</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Azeri</fullName>
                </value>
                <value>
                    <fullName>Bahasa Indonesia</fullName>
                </value>
                <value>
                    <fullName>Bahasa Melayu</fullName>
                </value>
                <value>
                    <fullName>Bantu</fullName>
                </value>
                <value>
                    <fullName>Bengali/Bangla</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chechen</fullName>
                </value>
                <value>
                    <fullName>Comorian/Shikomoro</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Dzongkha</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish/Walloon</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Georgian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hausa</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Activity_Criteria_Element__c</fullName>
        <label>Move Activity Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Activity_in_Months__c</fullName>
        <label>Move Activity in Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>